# SparkTemplates

./: README.md
EnginePatches/HeadlessSupport/: CMakeLists.txt.patch  README.md
Templates/01_HelloCube/: CMakeLists.txt  README.md  spark.modules.json  spark.project.json
Templates/02_AmbientScene/: CMakeLists.txt  README.md  spark.modules.json  spark.project.json
Templates/03_PhysicsPlayground/: CMakeLists.txt  README.md  spark.modules.json  spark.project.json
Templates/04_RPGDemo/: CMakeLists.txt  README.md  spark.modules.json  spark.project.json
Templates/05_AIArena/: CMakeLists.txt  README.md  spark.modules.json  spark.project.json
Templates/06_ParticleShowcase/: CMakeLists.txt  README.md  spark.modules.json  spark.project.json
Templates/07_ProceduralWorld/: CMakeLists.txt  README.md  spark.modules.json  spark.project.json
Templates/08_MultiplayerArena/: CMakeLists.txt  README.md  spark.modules.json  spark.project.json
Templates/09_CinematicDemo/: CMakeLists.txt  README.md  spark.modules.json  spark.project.json
Templates/09_CinematicDemo/Source/: CinematicDemoModule.cpp  CinematicDemoModule.h
Templates/10_ScriptingPlayground/: CMakeLists.txt  README.md  spark.modules.json  spark.project.json
Templates/11_StressTest/: CMakeLists.txt  README.md  spark.modules.json  spark.project.json
Templates/12_DedicatedServer/: CMakeLists.txt  README.md  spark.modules.json  spark.project.json
Templates/13_AnimationShowcase/: CMakeLists.txt  README.md  spark.project.json
Templates/14_MaterialLab/: CMakeLists.txt  (+2 more)
cmake/: SparkEnginePreflight.cmake
(+95 files in other folders)
